# raw_sync-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: events.rs  locks.rs
src/: lib.rs
src/events/: mod.rs  unix.rs  windows.rs
src/locks/: mod.rs  unix.rs  windows.rs
src/locks/unix/: mod.rs
src/locks/windows/: mod.rs
