[package]
name = "raw_sync"
version = "0.1.0"
authors = ["elast0ny <elast0ny00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.*"

[dev-dependencies]
log = "0.4"
env_logger = "0.7"

[target.'cfg(windows)'.dependencies]
rand = "0.*"
winapi = {version = "0.3", features = ["winbase", "winerror", "ntdef", "synchapi", "handleapi"]}

[target.'cfg(unix)'.dependencies]
nix = "0.10"
libc = "0.2"